--- a/backend/.github/workflows/deploy.yml
+++ b/backend/.github/workflows/deploy.yml
@@ -11,21 +11,21 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - name: Setup Python
+      uses: actions/setup-python@v4
       with:
-        python-version: 'python-3.9.12'
+        python-version: 3.9.12 
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        cd backend
         pip install -r requirements.txt
 
     - name: Deploy to Heroku
-      uses: akhileshns/heroku-deploy@v3.12.12
-      with:
-        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}  # Heroku API Key
-        heroku_app_name: "chatbot-server-trackerskku"       # Heroku 앱 이름
-        heroku_email: "seoin2744@gmail.com"        # Heroku 계정 이메일
+      env:
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+      run: |
+        heroku login --api-key $HEROKU_API_KEY
+        git push https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git HEAD:refs/heads/main --force
